--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,14 @@ local.properties
 # PDT-specific
 .buildpath
 
+#################
+## Qt Creator
+#################
+
+## Ignore Qt Creator specific files
+
+*.user
+*.pro
 
 #################
 ## Visual Studio
