--- a/ANN.vcxproj
+++ b/ANN.vcxproj
@@ -83,6 +83,9 @@
     <ClInclude Include="ANN.h" />
     <ClInclude Include="MainUnit.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
